@@ -594,6 +594,27 @@ public class jEdit
 
 	//{{{ Property methods
 
+	// getCurrentLanguage() method
+	/**
+	 * Returns the current language used by jEdit.
+	 *
+	 * @return the current language, never null
+	 * @since jEdit 5.0pre1
+	 */
+	public static String getCurrentLanguage()
+	{
+		String language;
+		if (getBooleanProperty("lang.usedefaultlocale"))
+		{
+			language = Locale.getDefault().getLanguage();
+		}
+		else
+		{
+			language = getProperty("lang.current", "en");
+		}
+		return language;
+	} //}}}
+
 	//{{{ getProperties() method
 	/**
 	 * Returns the properties object which contains all known
@@ -3572,15 +3593,7 @@ public class jEdit
 	 */
 	private static void initLocalizationProperties()
 	{
-		String language = null;
-		if (getBooleanProperty("lang.usedefaultlocale"))
-		{
-			language = Locale.getDefault().getLanguage();
-		}
-		else
-		{
-			language = getProperty("lang.current", "en");
-		}
+		String language = getCurrentLanguage();
 		InputStream langResource = null;
 		try
 		{
